[package]
name = "easy-tree"
version = "0.4.0"
authors = ["Anton Suprunchuk <anton.suprunchuk@gmail.com>"]
edition = "2021"
description = "A simple and efficient tree structure library for Rust with recursive traversal"
homepage = "https://github.com/antouhou/easy-tree"
repository = "https://github.com/antouhou/easy-tree"
license = "MIT"
keywords = ["tree", "traversal", "data_structure", "hierarchical", "depth_first"]
categories = ["data-structures", "algorithms"]
readme = "README.md"

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module"] }
# Add other dependencies here
rayon = { version = "1.10", optional = true }

[features]
default = []

[badges]
github-actions = { repository = "antouhou/easy-tree" }

[lib]
name = "easy_tree"
crate-type = ["cdylib", "rlib"]

# For documentation purpose
[package.metadata.docs.rs]
features = ["rayon"]
